# Figures

./: CMakeLists.txt  Circle.cpp  Circle.h  Figure.cpp  Figure.h  MainWindow.cpp  MainWindow.h  Octagon.cpp  Octagon.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  main.cpp
